--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1",
     "postcss": "^8.4.16",
+    "sass": "^1.54.8",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.7"
   }
