--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "daisyui": "^2.24.0",
     "react": "^18.2.0",
+    "react-cool-img": "^1.2.12",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0"
